--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,15 @@
+aniso8601==1.3.0
 click==6.7
 Flask==0.12.2
+Flask-RESTful==0.3.6
 gunicorn==19.7.1
 itsdangerous==0.24
 Jinja2==2.9.6
 MarkupSafe==1.0
-psycopg2==2.7.3
+psycopg2==2.7.3.1
 py==1.4.34
 pytest==3.2.1
+python-dateutil==2.6.1
 pytz==2017.2
 six==1.10.0
 Werkzeug==0.12.2
