--- a/nmail/database/settings.cfg
+++ b/nmail/database/settings.cfg
@@ -1,6 +1,6 @@
 [Database]
-DB_USER = allex
-DB_PASSWORD = allex
+DB_USER = postgres
+DB_PASSWORD =
 DB_NAME = n_mail
 DB_HOST = localhost
 DB_PORT = 5432
